Fixed Portfolio Section
Removed extra stuffs, other files.

--- a/portfolio-typography.html
+++ b/portfolio-typography.html
@@ -66,89 +66,62 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/ninja-slider.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV267Z"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
     <main id="main">
 
         <!-- ======= Portfolio Details ======= -->
-
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
 
                 <div class="row">
 
                     <div class="col-lg-8">
-                        <h2 class="portfolio-title">Typography</h2>
-
-                        <div id="ninja-slider">
-                            <ul>
-                                <li>
-                                    <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
-                                </li>
-                                <li>
-                                    <div class="video">
-                                        <iframe width="747" height="420" src="https://www.youtube.com/embed/kMCZrJXqOnA" frameborder="0" data-autoplay="true" id="ninja-slider-ifr2"></iframe>
-                                    </div>
-                                </li>
-                            </ul>
-                            <div class="fs-icon"></div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 portfolio-info">
-                        <h3 style="padding-top: 12px">Project information</h3>
-                        <ul>
-                            <li><strong>Category</strong>: Motion Graphics</li>
-                            <li><strong>Client</strong>: Self</li>
-                            <li><strong>Project date</strong>: March, 2022</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">N/A</a></li>
-                        </ul>
-
-                        <p>
-                            Typography is an animation technique that uses moving text to capture attention, set a tone, and entertain. It seems to be everywhere right now—commercials, music videos, mobile apps, and websites use it to make their words more impactful and add an element
-                            of artistry.
-                        </p>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        </div>
-
-
-
-        <!--
-        <div id="portfolio-details" class="portfolio-details">
-            <div class="container">
-
-                <div class="row">
-
-                    <div class="col-lg-8">
-                        <h2 class="portfolio-title">Typography</h2>
+                        <h2 class="portfolio-title">Typography Portfolio</h2>
 
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/portfolio-details-1.webp" alt="">
+                                <div class="swiper-slide" data-swiper-autoplay="10000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/bxwBKDpItKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/portfolio-details-2.webp" alt="">
+                                <div class="swiper-slide" data-swiper-autoplay="12000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/FF09AxrBx08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="8000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/E_7g2gKwNNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="8000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zdu6vw1etic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="12000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/un14ujWmdxM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="8000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/90DZtS-zKUE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="12000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zmGTMj_CRRQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="4000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/UE9-8NY7lBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="7000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/PWC72mPX3gU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                             </div>
@@ -158,12 +131,12 @@
                     </div>
 
                     <div class="col-lg-4 portfolio-info">
-                        <h3>Project information</h3>
+                        <h3 style="padding-top: 12px;"> <strong>Project Information</strong> </h3>
                         <ul>
                             <li><strong>Category</strong>: Motion Graphics</li>
                             <li><strong>Client</strong>: Self</li>
                             <li><strong>Project date</strong>: March, 2022</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">N/A</a></li>
+                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a></li>
                         </ul>
 
                         <p>
@@ -176,26 +149,11 @@
 
             </div>
         </div>
-
-        -->
         <!-- End Portfolio Details -->
 
     </main>
     <!-- End #main -->
 
-    <div class="credits">
-
-        <div class="credits-social">
-            <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        </div>
-
-
-        © 2022 | <a href="https://priyanuj.com">Priyanuj Dey</a> | All Rights Reserved
-
-    </div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
@@ -204,8 +162,7 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/js/ninja-slider.js"></script>
-    <script src="assets/js/ninjaVideoPlugin.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
