--- a/index.html
+++ b/index.html
@@ -612,13 +612,13 @@
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-mg">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/typography-animated.webp" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Motion Graphics</h4>
                             <p>Typography</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Liquid Text"><i class="bx bx-plus"></i></a>
-                                <a href="test-slider.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="View more"><i class="bx bx-link"></i></a>
+                                <!-- <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Liquid Text"><i class="bx bx-plus"></i></a> -->
+                                <a href="portfolio-typography.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="View more"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
