Added 2 more portfolio

--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@
                         <li data-filter=".filter-mg">Motion Graphics</li>
                         <li data-filter=".filter-vfx">Visual Effects</li>
                         <li data-filter=".filter-web">Website Design</li>
+                        <li data-filter=".filter-oth">Others</li>
                     </ul>
                 </div>
             </div>
@@ -624,29 +625,29 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-video filter-mg">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/CLP-Promo-animated.webp" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>Web 3</h4>
-                            <p>Web</p>
+                            <h4>Video Editing, Motion Graphics</h4>
+                            <p>Course Promo Video</p>
                             <div class="portfolio-links">
-                                <a href="assets/vid/amar.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                <!-- <a href="assets/vid/amar.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
+                                <a href="portfolio-courseleap-1.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-video">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-vfx">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/VFX-Works-animated.webp" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>App 2</h4>
-                            <p>App</p>
+                            <h4>Visual Effects</h4>
+                            <p>FX, Compositing, Chroma</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                <!-- <a href="assets/img/portfolio/portfolio-3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a> -->
+                                <a href="portfolio-vfx.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
