--- a/portfolio-courseleap-1.html
+++ b/portfolio-courseleap-1.html
@@ -83,49 +83,10 @@
                 <div class="row">
 
                     <div class="col-lg-8">
-                        <h2 class="portfolio-title">Typography Portfolio</h2>
+                        <h2 class="portfolio-title">Pre-IB Summer Courses with CourseLeap Promo Video</h2>
 
-                        <div class="portfolio-details-slider swiper">
-                            <div class="swiper-wrapper align-items-center">
-
-                                <div class="swiper-slide" data-swiper-autoplay="10000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/bxwBKDpItKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/FF09AxrBx08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/E_7g2gKwNNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zdu6vw1etic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/un14ujWmdxM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/90DZtS-zKUE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zmGTMj_CRRQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="4000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/UE9-8NY7lBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="7000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/PWC72mPX3gU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                            </div>
-                            <div class="swiper-pagination"></div>
+                        <div>
+                            <iframe width=100% height="470" src="https://www.youtube.com/embed/14gX9mHgKqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
 
                     </div>
@@ -133,15 +94,15 @@
                     <div class="col-lg-4 portfolio-info">
                         <h3 style="padding-top: 12px;"> <strong>Project Information</strong> </h3>
                         <ul>
-                            <li><strong>Category</strong>: Motion Graphics</li>
-                            <li><strong>Client</strong>: Self</li>
-                            <li><strong>Project date</strong>: March, 2022</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a></li>
+                            <li><strong>Category</strong>: Video Editing, Motion Graphics</li>
+                            <li><strong>Client</strong>: Courseleap Education</li>
+                            <li><strong>Project date</strong>: May, 2022</li>
+                            <li><strong>Project URL</strong>: <a href="httpS;//courseleap.org" target="_blank">courseleap.org</a></li>
                         </ul>
 
                         <p>
-                            Typography is an animation technique that uses moving text to capture attention, set a tone, and entertain. It seems to be everywhere right now—commercials, music videos, mobile apps, and websites use it to make their words more impactful and add an element
-                            of artistry.
+                            I was handed this project to make a promo for an online educational course by Courseleap Education. There were three differenet footages recorded by them and the recording were in three different settings so it made the colors different, audio levels
+                            different and also many footages were shot hand-held. My task was to incorporate them in a single package with also incorporating different motion graphics assets as well as cleaning of the sound and music.
                         </p>
                     </div>
 
@@ -162,7 +123,6 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
