--- a/portfolio-vfx.html
+++ b/portfolio-vfx.html
@@ -83,45 +83,40 @@
                 <div class="row">
 
                     <div class="col-lg-8">
-                        <h2 class="portfolio-title">Typography Portfolio</h2>
+                        <h2 class="portfolio-title">Visual Effects Portfolio</h2>
 
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
 
-                                <div class="swiper-slide" data-swiper-autoplay="10000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/bxwBKDpItKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/FF09AxrBx08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/E_7g2gKwNNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zdu6vw1etic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/un14ujWmdxM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/90DZtS-zKUE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="12000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/zmGTMj_CRRQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="swiper-slide" data-swiper-autoplay="38000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/ZnFkr5s33CQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                                 <div class="swiper-slide" data-swiper-autoplay="4000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/UE9-8NY7lBs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/m_5mPRiSx_0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
+                                <div class="swiper-slide" data-swiper-autoplay="6000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/dTPEC7Gm7l4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+
+                                <div class="swiper-slide" data-swiper-autoplay="9000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/sVv2wdKxZgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                                <div class="swiper-slide" data-swiper-autoplay="100000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/-3s1Evs_xxs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                                <div class="swiper-slide" data-swiper-autoplay="5000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/F0VZAvQMRNI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
                                 <div class="swiper-slide" data-swiper-autoplay="7000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/PWC72mPX3gU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/Fkj3qAuX9UI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                                <div class="swiper-slide" data-swiper-autoplay="7000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/t29ThXFgwH0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                                <div class="swiper-slide" data-swiper-autoplay="4000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/eE7G3JPKlkc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                             </div>
@@ -133,15 +128,14 @@
                     <div class="col-lg-4 portfolio-info">
                         <h3 style="padding-top: 12px;"> <strong>Project Information</strong> </h3>
                         <ul>
-                            <li><strong>Category</strong>: Motion Graphics</li>
+                            <li><strong>Category</strong>: Visual Effects</li>
                             <li><strong>Client</strong>: Self</li>
-                            <li><strong>Project date</strong>: March, 2022</li>
+                            <li><strong>Project date</strong>: Aug, 2019 - Ongoing</li>
                             <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a></li>
                         </ul>
 
                         <p>
-                            Typography is an animation technique that uses moving text to capture attention, set a tone, and entertain. It seems to be everywhere right now—commercials, music videos, mobile apps, and websites use it to make their words more impactful and add an element
-                            of artistry.
+                            This section is dedicated for all the works I've done as part of my course in Whistling Woods International as well as practice works to learn new ways to work on the different fields of VFX.
                         </p>
                     </div>
 
