--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <meta property="og:title" content="Priyanuj Dey | Portfolio" />
     <meta property="og:description" content="A passionate Video Editor, VFX & GFX Artist based out of Mumbai, India. Available for freelance works!" />
     <meta property="og:url" content="https://priyanuj.com" />
+    <meta name="googlebot" content="all">
 
     <!-- Favicons -->
     <!--<link href="assets/img/favicon.png" rel="icon">
